fixes weird button on mobile https://github.com/JustOpine/JustOpine/issues/132 + mobile responsive css

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -29,7 +29,7 @@ main {
     display: none; }
 
   main {
-    padding: 20px 30px; } }
+    padding: 20px 0; } }
 button, input[type="submit"] {
   border: none;
   -webkit-box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
@@ -38,7 +38,8 @@ button, input[type="submit"] {
   box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
   font-size: 14px;
   letter-spacing: 2px;
-  padding: 8px 17px; }
+  padding: 8px 17px;
+  -webkit-appearance: none; }
 
 button:hover, input[type="submit"]:hover {
   cursor: pointer;
@@ -348,21 +349,22 @@ nav {
     margin-top: 5px; } }
 @media (max-width: 880px) {
   .dashboard-assignment {
-    min-height: 100px; }
+    min-height: 100px;
+    padding: 0 0 10px 0; }
     .dashboard-assignment .assignment-icon {
       display: inline-block; }
     .dashboard-assignment .dashboard-image {
       display: none; }
     .dashboard-assignment h2 {
       display: block;
-      font-size: 20px;
+      font-size: 18px;
       margin: 0;
       padding: 10px; }
     .dashboard-assignment p {
       display: none; }
     .dashboard-assignment .tag {
-      font-size: 14px;
-      margin: 10px 10px 20px 10px; }
+      font-size: 12px;
+      margin: 0 0 0 10px; }
 
   .dashboard-assignment:hover {
     -webkit-transform: scale(1);
